--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,15 +14,17 @@
 .card{
 display: flex;
 background-color: hsl(244, 38%, 16%) ;
-margin: 40px;
+margin: 170px;
 position: relative;
 width: 1110px;
 height: 450px;
 border-radius: 10px;
+flex-direction: row-reverse;
 }
 .image{
-    max-width: 100%;
+    width: 540px;
     height: 450px;
     border-radius: 10px;
     filter: hsl(277, 64%, 61%);
+    
 }
