--- a/stylesheet.css
+++ b/stylesheet.css
@@ -21,11 +21,13 @@ height: 450px;
 border-radius: 10px;
 flex-direction: row-reverse;
 }
-.image{
+
+img{
     width: 540px;
     height: 450px;
     border-radius: 10px;
-    filter: hsl(277, 64%, 61%);
+    background: hsl(277, 64%, 61%);
+    
     
 }
 .text-box{
