--- a/stylesheet.css
+++ b/stylesheet.css
@@ -22,11 +22,19 @@ border-radius: 10px;
 flex-direction: row-reverse;
 }
 
+#color{
+    width: 540px;
+    height: 450px;
+    border-radius: 10px;
+    background-image: linear-gradient(rgba(10, 20, 30, 0.5),rgba(10, 20, 30, 0.5)) ;
+    background-position: center;
+    background-size: cover;
+}
+
 img{
     width: 540px;
     height: 450px;
     border-radius: 10px;
-    background: hsl(277, 64%, 61%);
     
     
 }
